'implementacao_cadastro_pessoa'

--- a/src/app/pessoa/pessoa-manter/pessoa-manter.component.html
+++ b/src/app/pessoa/pessoa-manter/pessoa-manter.component.html
@@ -57,7 +57,11 @@
     
         <br />
     
-        <button (click)="incluir()" >incluir</button>
+        <button *ngIf="operacao=='incluir'" (click)="incluir()" >incluir</button>
+
+        <button *ngIf="operacao=='alterar'" (click)="alterar()" >alterar</button>
+
+        <button (click)="voltar()" >voltar</button>
 
     </div>
 
